  do html nechat jako jednu z voleb.
* test, jestli jsou v urcitych integralech meze konstanty (a ne napr."exp")
* use a string variables for formconv and timeout executables 
* integral: if function can be splitted into sum and is in x variable,
   we can investigate terms separately. Allow this feature also for
   general variable (by converting into x variable first)
* put all po files into one directory

changes from January 2008
-------------------------

Some changes are motivatied by error messages from logs. It may
hapen that the problem which caused an error works well after few 
days. 


april 2010
* fixed bug
http://sourceforge.net/tracker/?func=detail&aid=2982092&group_id=221048&atid=1052162
* Catalan translation, thanks to Marti Ruiz-Altaba
* Changed repo into Mercurial, removed MAW releases and replaced by a script 
  which downloads the sources automatically and takes care about some more things.

february 2010
* Polish translation, thanks to Przemyslaw Dabek

october 2009 
* derivatives: test a#b replaced by fullratsimp(a-b)#0 --- fix for 
       sqrt(x**2+y**2)/y+y**4/4+x**2*y/2-y**3/2*sqrt((x/y)**2+1)+1/2*x*sqrt(x**2+y**2)
* graphs: strict policy which disallows to biuld more than one animation on
       the server at given time

july 2009
* autonomous systems: print eigenvalues when looking for stationary point
* developement frozen till September ---- hollidays :)

june 2009
* minor fix for LDE like y''+2.5*y'=exp(-x) ... coefficients passed to radcan first

may 2009
* the name of maxima executable is in a PHP variable. This allows to
  switch between diferent maxima versions easily
* ODE: added support for exact equations
* ODE: changed behavior: the expression from the second field 
  is passed to formconv and Maxima solver and solved with respect to y'.
  If the solution is unique, the result is passed to stepwise solver
  automatically.  
* minmax3d: added more simplifications to derivatives and improved test 