@@ -1,6 +1,7 @@
 <pre>
-We use gettext and hence it is pretty simple to translate all messages.
-To translate MAW you have to add translation to text strings located in two files messages.po.
+We use gettext and hence it is pretty simple to translate all messages in
+MAW. To translate MAW you have to add translation to text strings located in two .po
+files. English po files (en_US.po) are good start for this task.
 
 <li> <a href="http://mathassistant.hg.sourceforge.net/hgweb/mathassistant/maw-html/file/6fdc31514b8d/locale">Input forms</a> (English skeleton, translations into Catalan, Czech and Polish)
 
